@@ -2,34 +2,41 @@ package test.java.com.example;
 
 import org.junit.Test;
 
-import static org.junit.api.Assertions.*;
+import java.io.IOException;
+import java.net.HttpURLConnection;
+import java.net.URL;
 
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import java.time.Duration;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.fail;
 
 public class AccessTest {
 
+    private static final String TARGET_URL = "https://example.com";
+
     @Test
-    public void testExampleDotComAccessible() throws Exception {
-        HttpClient client = HttpClient.newBuilder()
-                .connectTimeout(Duration.ofSeconds(5))
-                .followRedirects(HttpClient.Redirect.NORMAL)
-                .build();
+    public void testWebsiteIsAccessible() {
+        System.out.println("Test Başlıyor: " + TARGET_URL + " adresine erişim kontrol ediliyor...");
 
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(new URI("https://example.com"))
-                .timeout(Duration.ofSeconds(10))
-                .GET()
-                .build();
+        try {
+            URL url = new URL(TARGET_URL);
+            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 
-        HttpResponse<Void> response = client.send(request, HttpResponse.BodyHandlers.discarding());
-        int status = response.statusCode();
+            // Timeout ayarları (örneğin 5 saniye)
+            connection.setConnectTimeout(5000);
+            connection.setReadTimeout(5000);
 
-        System.out.println("HTTP status for https://example.com : " + status);
-        // Assert that the status is 2xx
-        Assertions.assertTrue(status >= 200 && status < 300, "Expected 2xx response from example.com but got: " + status);
+            connection.setRequestMethod("GET");
+            connection.connect();
+
+            int responseCode = connection.getResponseCode();
+            System.out.println("Sunucu Yanıt Kodu: " + responseCode);
+
+            // Eğer yanıt kodu 200 ise test geçer, değilse kalır.
+            assertEquals(String.valueOf(200), responseCode, "URL erişilebilir değil! Beklenen: 200, Gelen: " + responseCode);
+
+        } catch (IOException e) {
+            // Bağlantı hatası veya DNS sorunu olursa test fail eder.
+            fail("Web sitesine bağlanırken hata oluştu: " + e.getMessage());
+        }
     }
 }
